[project]
name = "repl-nix-webhookappreviewparser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=21.2.0",
    "pytz>=2024.2",
    "eventlet>=0.24.1",
]
